temp fix for alerts on mobile - transform position fixed bug see https://stackoverflow.com/questions/15194313/transform3d-not-working-with-position-fixed-children

--- a/app/assets/stylesheets/modules/alert.scss
+++ b/app/assets/stylesheets/modules/alert.scss
@@ -10,6 +10,7 @@
 	color: white;
 	box-shadow: 0 2px 7px 0 #00000087;
 	background: hsl(0, 0%, 19%);
+	max-width: calc(100% - 34px);
 	a {
 		color: $teal-100;
 	}
